src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    /*@apply dark:bg-black;*/
    background-color: var(--bg);
}

:root {
    --blue: #133F67;
    --bluer: blue;
    --black: #1F1E1E;
    --red: #EE4266;
    --green: #74b031;
    --yellow: #D6D84F;
    --purple: purple;

    --bg: #FEFEFE;
    --text: #1F1E1E;
}

/*TODO these colors are _temp_*/
[data-theme="dark"] {
    /*--bg: #15171a;*/
    --bg: #1D1D21;
    --text: #E4E4E4;
    --blue: #6FB1EF;
    --bluer: #79BDFD;

    --purple: purple; /*todo*/
}

body {
    margin: 40px;
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    color: var(--text);
    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
}

.mono {
  font-family: 'Roboto Mono', monospace;
}

a {
    cursor: pointer !important;
    position: relative;
    z-index: 2;
    cursor: pointer;
    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
}

textarea,input {
  border-width: 1px;
}

li {
  margin-bottom: 3px;
  margin-top: 3px;
}

/* This is probably all scuffed. Feel free to fix me. */

h2 {
  font-family: 'Roboto Mono', monospace;
  font-size: 20px;
  font-weight: bold;
}

h3 {
  font-family: 'Roboto Mono', monospace;
  font-size: 16px;
  font-weight: bold;
}


button {
  color: blue !important;  
}

.callout {
    font-weight: 500;
    font-size: 26px;
    margin-bottom: px;
}

.loadbar {
    margin: 10px 0;
    font-weight: 500;
    font-size: 11px;
    color: var(--green);
}

.empty {
    color: var(--red);
    font-size: 13px;
    padding-top: 3px;
    font-weight: 400;
    opacity: 0.2;
}


.secondary {
    font-weight: 600;
    padding-top: 20px;
    margin: 0;
    font-size: 18px;
}

textarea, input {
    border-radius: 2px;
}

input {
    padding: 1px 0 0 10px;
}

textarea:focus, input:focus{
    outline: var(--blue);
}

button {
    color: var(--blue) !important;
    font-weight: 600;
    margin: 5px 0;
}

